# Picodet_NCNN

./: .gitignore  CMakeLists.txt  README.md  build_opencv_options.sh  main.cpp  picodet.cpp  picodet.h  picodet_api.cpp  picodet_api.h  picodet_id.h  utils.cpp  utils.h
